<resources>
    <string name="api_key">AIzaSyAMMY8Z4RyngHI6YugbRi8su3bAEsbVQAQ</string>
    <string name="facebook_app_id">156419108324847</string>
    <string name="fb_login_protocol_scheme">fb156419108324847</string>
    <string name="app_name">Smeezy</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="relationship_status">Relationship status</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="agree_terms_and_conditions">I agree to Terms and Conditions.</string>
    <string name="forgot_password_description">Please Enter Your Registered Email Address. \n We will Send a New Password On Your \n Registered Email ID.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="no_internet_connection">There is no internet connection.</string>
    <string name="all_fields_required">All Fields Required, Please Fill.</string>
    <string name="name_required">Name Required, Please Fill.</string>
    <string name="email_required">Email Required, Please Fill.</string>
    <string name="password_required">Password Required, Please Fill.</string>
    <string name="confirm_password_required">Confirm Password Required, Please Fill.</string>
    <string name="password_not_same">Password and Confirm Password are not Same.</string>
    <string name="provide_a_valid_email_address">Please Provide a Valid Email Address.</string>
    <string name="dob_required">Date of Birth Required, Please Select.</string>
    <string name="relationship_status_required">Relationship Status Required, Please Fill.</string>
    <string name="phone_number_required">Phone Number Required, Please Fill.</string>
    <string name="location_required">Location Required, Please Select.</string>
    <string name="profile_pic_required">Profile Picture Required, Please Add.</string>
    <string name="accept_terms_and_conditions">Please accept terms and conditions.</string>
    <string name="camera_unavailable">Camera Unavailable</string>
    <string name="gallery_unavailable">Gallery Unavailable</string>
    <string name="file_save_error">Error saving file</string>
    <string name="select_picture">Select Picture</string>
    <string name="select_video">Select Video</string>
    <string name="network_failed">Network Failed</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="search">Search</string>
    <string name="search_people_and_things">Search People &amp; Things</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="my_profile">My Profile</string>
    <string name="whats_on_your_mind">What\'s on your mind?</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="comment">Comment</string>
    <string name="report">Report</string>
    <string name="type_a_message">Type a message</string>
    <string name="video">Video</string>
    <string name="link">Link</string>
    <string name="post">Post</string>
    <string name="message_required">Message Required!</string>
    <string name="no_messages">No Messages</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password_required">Current Password Required, Please Fill.</string>
    <string name="new_password_required">New Password Required, Please Fill.</string>
    <string name="new_and_confirm_password_not_same">New Password and Confirm Password do not match!</string>
    <string name="description">Description</string>
    <string name="filter">Filter</string>
    <string name="image">Image</string>
    <string name="all">All</string>
    <string name="add_friend">Add Friend</string>
    <string name="message">Message</string>
    <string name="about_me">About me</string>
    <string name="about_us">About Us</string>
    <string name="dob">Dob</string>
    <string name="edit_details">Edit details</string>
    <string name="edit_other_settings">Edit other settings</string>
    <string name="social_connection">Social Connection</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">LinkedIn</string>
    <string name="other_setting">Other Setting</string>
    <string name="religious_views">Religious views</string>
    <string name="political_views">Political views</string>
    <string name="work">Work</string>
    <string name="school">School</string>
    <string name="description_required">Description Required, Please Fill.</string>
    <string name="video_length_limit_error">Video length can\'t be more than 2 minutes!</string>
    <string name="url">URL</string>
    <string name="share_video">Share Video</string>
    <string name="send">Send</string>
    <string name="add">Add</string>
    <string name="feedback">Feedback</string>
    <string name="my_feedback">My Feedback</string>
    <string name="update">Update</string>
    <string name="request_sent">Request Sent</string>
    <string name="accept_request">Accept Request</string>
    <string name="reject_request">Reject Request</string>
    <string name="enter_video_url">Enter Video URL</string>
    <string name="url_required">URL Required, Please Fill.</string>
    <string name="enter_link">Enter Link</string>
    <string name="summary_required">Summary Required, Please Fill.</string>
    <string name="comment_required">Comment Required!</string>
    <string name="select_reason">Select Reason</string>
    <string name="reason_required">Reason Required, Please Select.</string>
    <string name="no_record_found">No record found!</string>
    <string name="max_four_images_allowed">Max 4 images allowed!</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="write_message_here">Write Message Here&#8230;</string>
    <string name="no_friends">No Friends</string>
    <string name="no_feedback">No Feedbacks</string>
    <string name="post_feedback">Post Feedback</string>
    <string name="write_feedback_here">Write Feedback Here&#8230;</string>
    <string name="please_select_like_or_dislike">Please Select Like or Dislike!</string>
    <string name="my_community">My Community</string>
    <string name="public_post">Public Post</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="private_post">Private Post</string>
    <string name="post_here_things_you_are_looking_to_borrow">Post here things you are looking to borrow from your community&#8230;</string>
    <string name="share_a_private_post_with_your_friends">Share a private post with your friends and on your profile&#8230;</string>
    <string name="no_posts_yet">There are no posts yet!</string>
    <string name="no_comments">No Comments</string>
    <string name="my_groups">Groups</string>
    <string name="my_events">Events</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search_distance">Search Distance</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="no_friend_requests">No Friend Requests</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_your_sure_you_want_to_delete_this_post">Are you sure you want to delete this post?</string>
    <string name="set_search_distance">Set Search Distance</string>
    <string name="no_events_to_display">No Events To Display</string>
    <string name="create_event">Create Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Event Location</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_description">Event Description</string>
    <string name="set_event_as_private">Set Event as Private</string>
    <string name="set_group_as_private">Set Group as Private</string>
    <string name="choose_event_picture">Choose Event Picture</string>
    <string name="it_only_takes_few_seconds">It only takes few seconds!</string>
    <string name="edit_event">Edit Event</string>
    <string name="invite">Invite</string>
    <string name="delete_event">Delete Event</string>
    <string name="to_smeezy">To (Smeezy)</string>
    <string name="send_invite">Send Invite</string>
    <string name="select_friends_to_invite">Select friends to invite</string>
    <string name="friends">Friends</string>
    <string name="my_share">Timeline</string>
    <string name="my_stuff">My Stuff</string>
    <string name="about">About</string>
    <string name="timeline">Timeline</string>
    <string name="time">Time</string>
    <string name="event_name_required">Event Name Required, Please Fill.</string>
    <string name="event_location_required">Event Location Required, Please Select.</string>
    <string name="event_date_required">Event Date Required, Please Select.</string>
    <string name="event_time_required">Event Time Required, Please Select.</string>
    <string name="event_description_required">Event Description Required, Please Fill.</string>
    <string name="event_image_required">Event Image Required, Please Add.</string>
    <string name="no_friends_selected">No friends selected!</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="discover">Discover</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="choose_group_picture">Choose Group Picture</string>
    <string name="edit_group">Edit Group</string>
    <string name="create_group">Create Group</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help">Help</string>
    <string name="donate">Donate</string>
    <string name="events_birthdays">Events/Birthdays</string>
    <string name="borrow">Borrow</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="select_category">Select Category</string>
    <string name="about_smeezy">About Smeezy</string>
    <string name="search_item">Search Item</string>
    <string name="filter_by">Filter By</string>
    <string name="unfollow_user">Unfollow User</string>
    <string name="report_post">Report Post</string>
    <string name="change_category">Change Category</string>
    <string name="bookmark_item">Bookmark Item</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="buy">Buy</string>
    <string name="rent">Rent</string>
    <string name="suggested_friends">Suggested Friends</string>
    <string name="barter">Barter</string>
    <string name="options">Options</string>
</resources>