<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/selector_sidemenu_home_icon"
            android:title="@string/home" />
    </group>

    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/suggested_friends"
            android:icon="@drawable/near_by"
            android:title="@string/suggested_friends" />
    </group>-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/setting"
            android:icon="@drawable/selector_sidemenu_setting_icon"
            android:title="@string/settings" />
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/terms"
            android:icon="@drawable/selector_sidemenu_terms_icon"
            android:title="@string/terms_and_conditions" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/privacy_policy"
            android:icon="@drawable/privacy_policy"
            android:title="@string/privacy_policy" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/contact_us"
            android:title="@string/contact_us" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/faq"
            android:icon="@drawable/faq"
            android:title="@string/faq" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/invite_friend"
            android:icon="@drawable/share_inactive"
            android:title="@string/invite_a_friend" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/selector_sidemenu_logout_icon"
            android:title="@string/logout" />
    </group>


</menu>
