<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dimen_20dp"
    android:layout_marginRight="@dimen/dimen_20dp"
    android:background="@drawable/edittext_box"
    android:gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.app.smeezy.views.CustomFontTextView
            android:id="@+id/txt_title_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:gravity="center"
            android:text="@string/filter_by"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_20sp"
            app:typeface="Gentona_Book.otf" />

        <ImageView
            android:id="@+id/img_filter_cross"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:src="@drawable/cross_blue" />

    </RelativeLayout>

    <com.app.smeezy.views.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:text="@string/select_category"
        android:textColor="@color/light_black"
        android:textSize="@dimen/txt_15sp"
        app:typeface="Gentona_Book.otf" />

    <Spinner
        android:id="@+id/spinner_stuff_category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:background="@drawable/spinner_border" />


    <com.app.smeezy.views.CustomFontEdittext
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:background="@color/transparent"
        android:hint="@string/search_item"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/txt_17sp"
        app:typeface="Gentona_Light.otf" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:background="@color/hint_color" />

    <com.app.smeezy.views.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:text="@string/options"
        android:textColor="@color/light_black"
        android:textSize="@dimen/txt_15sp"
        app:typeface="Gentona_Book.otf" />


    <com.app.smeezy.views.CustomFontCheckBox
        android:id="@+id/cb_filter_borrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:textColor="@color/light_black"
        android:textSize="@dimen/txt_13sp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:paddingLeft="@dimen/dimen_10dp"
        android:text="@string/borrow" />

    <com.app.smeezy.views.CustomFontCheckBox
        android:id="@+id/cb_filter_trade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:textColor="@color/light_black"
        android:textSize="@dimen/txt_13sp"
        android:paddingLeft="@dimen/dimen_10dp"
        android:text="@string/barter" />

    <com.app.smeezy.views.CustomFontCheckBox
        android:id="@+id/cb_filter_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:textSize="@dimen/txt_13sp"
        android:textColor="@color/light_black"
        android:paddingLeft="@dimen/dimen_10dp"
        android:text="@string/buy" />

    <com.app.smeezy.views.CustomFontCheckBox
        android:id="@+id/cb_filter_rent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:textSize="@dimen/txt_13sp"
        android:textColor="@color/light_black"
        android:paddingLeft="@dimen/dimen_10dp"
        android:text="@string/rent" />


    <com.app.smeezy.views.CustomFontButton
        android:id="@+id/btn_filter_submit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_17sp"
        app:typeface="Gentona_Light.otf" />


</LinearLayout>