<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dimen_20dp"
    android:layout_marginRight="@dimen/dimen_20dp"
    android:background="@drawable/edittext_box"
    android:gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.app.smeezy.views.CustomFontTextView
            android:id="@+id/txt_title_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:gravity="center"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_20sp"
            app:typeface="Gentona_Book.otf" />

        <ImageView
            android:id="@+id/img_filter_cross"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:src="@drawable/cross_blue" />

    </RelativeLayout>

    <com.app.smeezy.views.CustomFontCheckBox
        android:id="@+id/cb_filter_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:paddingLeft="@dimen/dimen_10dp"
        android:text="@string/image"
        android:textColor="@color/light_black"
        android:textSize="@dimen/txt_13sp" />

    <com.app.smeezy.views.CustomFontCheckBox
        android:id="@+id/cb_filter_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:paddingLeft="@dimen/dimen_10dp"
        android:text="@string/video"
        android:textColor="@color/light_black"
        android:textSize="@dimen/txt_13sp" />

    <com.app.smeezy.views.CustomFontCheckBox
        android:id="@+id/cb_filter_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:paddingLeft="@dimen/dimen_10dp"
        android:text="@string/link"
        android:textColor="@color/light_black"
        android:textSize="@dimen/txt_13sp" />

    <com.app.smeezy.views.CustomFontCheckBox
        android:id="@+id/cb_filter_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:paddingLeft="@dimen/dimen_10dp"
        android:text="@string/all"
        android:textColor="@color/light_black"
        android:textSize="@dimen/txt_13sp" />


    <com.app.smeezy.views.CustomFontButton
        android:id="@+id/btn_filter_submit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_17sp"
        app:typeface="Gentona_Light.otf" />


</LinearLayout>