<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.smeezy.fragment.InterestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:orientation="vertical">


        <com.app.smeezy.views.CustomFontTextView
            android:id="@+id/tv_interest_bookmark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:drawableRight="@drawable/arrow_icon"
            android:gravity="center_vertical"
            android:text="@string/bookmarks"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:typeface="Gentona_Book.otf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="@drawable/devider_line" />

        <com.app.smeezy.views.CustomFontTextView
            android:id="@+id/tv_interest_my_groups"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:drawableRight="@drawable/arrow_icon"
            android:gravity="center_vertical"
            android:text="@string/my_groups"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:typeface="Gentona_Book.otf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="@drawable/devider_line" />

        <com.app.smeezy.views.CustomFontTextView
            android:id="@+id/tv_interest_my_events"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:drawableRight="@drawable/arrow_icon"
            android:gravity="center_vertical"
            android:text="@string/events_birthdays"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:typeface="Gentona_Book.otf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="@drawable/devider_line" />

        <com.app.smeezy.views.CustomFontTextView
            android:id="@+id/tv_interest_my_stuff"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:drawableRight="@drawable/arrow_icon"
            android:gravity="center_vertical"
            android:text="@string/my_stuff"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:visibility="gone"
            app:typeface="Gentona_Book.otf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="@drawable/devider_line"
            android:visibility="gone" />

        <com.app.smeezy.views.CustomFontTextView
            android:id="@+id/tv_interest_suggested_friends"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:drawableRight="@drawable/arrow_icon"
            android:gravity="center_vertical"
            android:text="@string/suggested_friends"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:typeface="Gentona_Book.otf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="@drawable/devider_line" />

        <com.app.smeezy.views.CustomFontTextView
            android:id="@+id/tv_interest_invite_a_friend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:drawableRight="@drawable/arrow_icon"
            android:gravity="center_vertical"
            android:text="@string/invite_a_friend"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:typeface="Gentona_Book.otf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="@drawable/devider_line" />

        <com.app.smeezy.views.CustomFontTextView
            android:id="@+id/tv_interest_about_us"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:drawableRight="@drawable/arrow_icon"
            android:gravity="center_vertical"
            android:text="@string/about_smeezy"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:typeface="Gentona_Book.otf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="@drawable/devider_line" />

        <com.app.smeezy.views.CustomFontTextView
            android:id="@+id/tv_interest_help"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:drawableRight="@drawable/arrow_icon"
            android:gravity="center_vertical"
            android:text="@string/help"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:typeface="Gentona_Book.otf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="@drawable/devider_line" />


        <com.app.smeezy.views.CustomFontTextView
            android:id="@+id/tv_interest_donate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:drawableRight="@drawable/arrow_icon"
            android:gravity="center_vertical"
            android:text="@string/donate"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:typeface="Gentona_Book.otf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="@drawable/devider_line" />


    </LinearLayout>

</ScrollView>
